--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <link href="/assets/main.css" rel="stylesheet" />
+        <link href="/assets/output.css" rel="stylesheet" />
         <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
         <title>{% block title %}{{ title }}{% endblock %}</title>
         {% block head %}{% endblock %}
